src/objects/MA_Project__c.object
<CustomObject>
    <description>Private Object used only by M&amp;A to track their projects on Accounts.</description>
    <fields>
        <fullName>MA_Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>M&amp;A Projects</relationshipLabel>
        <relationshipName>MA_Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MA_AdvisorsP7S1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Advisors P7S1</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>MA Project (Deal Team Advisors P7S1)</relationshipLabel>
        <relationshipName>MA3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MA_BULead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>BU Lead</label>
        <referenceTo>User</referenceTo>
        <relationshipName>MA2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MA_CalloptionP7S1__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Call option P7S1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MA_CashInvest__c</fullName>
        <label>Cash Invest (in m)</label>
        <precision>17</precision>
        <scale>1</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MA_CloseDate__c</fullName>
        <label>Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MA_ClosingAcounts__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Closing Acounts</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MA_Cluster__c</fullName>
        <label>Cluster</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>MA_Unit__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Lead Gen/Classifieds</fullName>
                </value>
                <value>
                    <fullName>Travel &amp; Gift</fullName>
                </value>
                <value>
                    <fullName>Beauty &amp; Accessories</fullName>
                </value>
                <value>
                    <fullName>Home shopping</fullName>
                </value>
                <value>
                    <fullName>Ad Tech</fullName>
                </value>
                <value>
                    <fullName>MCN/Video</fullName>
                </value>
                <value>
                    <fullName>7NXT</fullName>
                </value>
                <value>
                    <fullName>Sports</fullName>
                </value>
                <value>
                    <fullName>OTC</fullName>
                </value>
                <value>
                    <fullName>Bio Household &amp; Family</fullName>
                </value>
                <value>
                    <fullName>Med. Cosmetics  &amp; Personal Care</fullName>
                </value>
                <value>
                    <fullName>New Nutrition</fullName>
                </value>
                <value>
                    <fullName>Consumer  Med. Devices</fullName>
                </value>
                <value>
                    <fullName>Life &amp; Health  Services/Products</fullName>
                </value>
                <value>
                    <fullName>Broadcasting</fullName>
                </value>
                <value>
                    <fullName>CP: Non-Scripted</fullName>
                </value>
                <value>
                    <fullName>CP: Scripted</fullName>
                </value>
                <value>
                    <fullName>General M&amp;A / Transformative</fullName>
                </value>
                <value>
                    <fullName>New sales platforms</fullName>
                </value>
                <value>
                    <fullName>Fashion &amp; Sports</fullName>
                </value>
                <value>
                    <fullName>Home &amp; Living</fullName>
                </value>
                <value>
                    <fullName>Overall Entertainment</fullName>
                </value>
                <value>
                    <fullName>Digital Sales (SOM)</fullName>
                </value>
                <value>
                    <fullName>7Innovate</fullName>
                </value>
                <value>
                    <fullName>FMCG</fullName>
                </value>
                <value>
                    <fullName>Health</fullName>
                </value>
                <value>
                    <fullName>Nutrition</fullName>
                </value>
                <value>
                    <fullName>SOM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MA_Coverage__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>M&amp;A Coverage</label>
        <referenceTo>User</referenceTo>
        <relationshipName>MA4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MA_Dealprob__c</fullName>
        <label>Deal prob</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>100%</fullName>
                </value>
                <value>
                    <fullName>&gt;90%</fullName>
                </value>
                <value>
                    <fullName>75%</fullName>
                </value>
                <value>
                    <fullName>50%</fullName>
                </value>
                <value>
                    <fullName>25%</fullName>
                </value>
                <value>
                    <fullName>&lt;25%</fullName>
                </value>
                <value>
                    <fullName>10%</fullName>
                </value>
                <value>
                    <fullName>0%</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MA_Direct_Equity__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Direct Equity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MA_EBITDA__c</fullName>
        <label>EBITDA (in m)</label>
        <precision>17</precision>
        <scale>1</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MA_EVinm__c</fullName>
        <label>EV (in m)</label>
        <precision>17</precision>
        <scale>1</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MA_EVoverEBITDA__c</fullName>
        <formula>IF( 
TEXT( MA_EBITDA__c ) = &quot;0&quot;, 
&quot;n.a.&quot;, 
TEXT( ROUND((MA_EVinm__c / MA_EBITDA__c), 2)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EV over EBITDA</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MA_EVoverRevenue__c</fullName>
        <formula>IF(
TEXT( MA_Revenue__c ) = &quot;0&quot;, 
&quot;n.a.&quot;,
TEXT( ROUND((MA_EVinm__c  /   MA_Revenue__c), 2)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EV over Revenue</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MA_EarnOutforTarget__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Earn-Out for Target</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MA_Emp_BULead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>BU Lead</label>
        <referenceTo>P7S1_Emp__c</referenceTo>
        <relationshipLabel>M&amp;A Projects</relationshipLabel>
        <relationshipName>MA_Project_BULead</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MA_Emp_MACoverage__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>M&amp;A Coverage</label>
        <referenceTo>P7S1_Emp__c</referenceTo>
        <relationshipLabel>M&amp;A Projects (M&amp;A Coverage)</relationshipLabel>
        <relationshipName>MA_Project_MACoverage</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MA_Emp_MAProjectManager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>M&amp;A Project Manager</label>
        <referenceTo>P7S1_Emp__c</referenceTo>
        <relationshipLabel>M&amp;A Projects (M&amp;A Project Manager)</relationshipLabel>
        <relationshipName>MA_Project_ProjectManager</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MA_FirstContact__c</fullName>
        <label>First Contact</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MA_GMV__c</fullName>
        <label>GMV (in m)</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MA_LockedBox__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Locked Box</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MA_MAProjectManager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>M&amp;A Project Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>MA3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MA_MAstatus__c</fullName>
        <label>M&amp;A status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>pre closing</fullName>
                </value>
                <value>
                    <fullName>pre signing</fullName>
                </value>
                <value>
                    <fullName>pre IC III EB/SB</fullName>
                </value>
                <value>
                    <fullName>pre IC II</fullName>
                </value>
                <value>
                    <fullName>pre IC I</fullName>
                </value>
                <value>
                    <fullName>pre SDB I</fullName>
                </value>
                <value>
                    <fullName>pre SDB II</fullName>
                </value>
                <value>
                    <fullName>approach</fullName>
                </value>
                <value>
                    <fullName>idea</fullName>
                </value>
                <value>
                    <fullName>closed</fullName>
                </value>
                <value>
                    <fullName>on hold</fullName>
                </value>
                <value>
                    <fullName>aborted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MA_Managementincentive_program__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Management incentive program</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MA_MediaforEquity__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Media for Equity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MA_MinimumGuarantee__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Minimum Guarantee</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MA_NMV__c</fullName>
        <label>NMV (in m)</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MA_NextStepsIssues2__c</fullName>
        <label>Next Steps/Issues2</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MA_Next_Steps_Issues__c</fullName>
        <label>Next Steps/Issues</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MA_Other__c</fullName>
        <label>Other</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MA_P7S1Unit__c</fullName>
        <label>P7S1 Unit</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Games</fullName>
                </value>
                <value>
                    <fullName>PSD</fullName>
                </value>
                <value>
                    <fullName>SevenOne</fullName>
                </value>
                <value>
                    <fullName>TVD</fullName>
                </value>
                <value>
                    <fullName>P7S1 Group</fullName>
                </value>
                <value>
                    <fullName>Red Arrow</fullName>
                </value>
                <value>
                    <fullName>1-V-Commerce</fullName>
                </value>
                <value>
                    <fullName>V-Digital</fullName>
                </value>
                <value>
                    <fullName>Magic Internet</fullName>
                </value>
                <value>
                    <fullName>Video</fullName>
                </value>
                <value>
                    <fullName>Seven Ventures</fullName>
                </value>
                <value>
                    <fullName>Puls 4</fullName>
                </value>
                <value>
                    <fullName>SevenOne Capital</fullName>
                </value>
                <value>
                    <fullName>SevenTravel</fullName>
                </value>
                <value>
                    <fullName>Pay-VoD</fullName>
                </value>
                <value>
                    <fullName>Dig Entertain</fullName>
                </value>
                <value>
                    <fullName>7Innovate</fullName>
                </value>
                <value>
                    <fullName>7Next</fullName>
                </value>
                <value>
                    <fullName>7Next Video</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MA_Priority__c</fullName>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
                <value>
                    <fullName>n.a.</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MA_ProjectStatus__c</fullName>
        <label>Project Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A- Idea / Sourcing</fullName>
                </value>
                <value>
                    <fullName>B- Commercial Assessment Approved</fullName>
                </value>
                <value>
                    <fullName>C- Term Sheet/Indicative Bid Stage</fullName>
                </value>
                <value>
                    <fullName>D- Due Diligence</fullName>
                </value>
                <value>
                    <fullName>E- Negotiations</fullName>
                </value>
                <value>
                    <fullName>F- Signing</fullName>
                </value>
                <value>
                    <fullName>G- Closing</fullName>
                </value>
                <value>
                    <fullName>H- Aborted</fullName>
                </value>
                <value>
                    <fullName>I- On hold</fullName>
                </value>
                <value>
                    <fullName>J- N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MA_PutoptionP7S1__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Put option P7S1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MA_Ranking__c</fullName>
        <formula>IF(
 OR (ISPICKVAL(MA_MAstatus__c,&quot;idea&quot;), ISPICKVAL(MA_MAstatus__c,&quot;approach&quot;)), 3000000,
 IF(
 OR (ISPICKVAL(MA_MAstatus__c,&quot;aborted&quot;),  ISPICKVAL(MA_MAstatus__c,&quot;on hold&quot;)), 1000000,
 2000000))
 +  MA_EVinm__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ranking</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MA_Revenue__c</fullName>
        <label>Revenue (in m)</label>
        <precision>17</precision>
        <scale>1</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MA_SIGNING__c</fullName>
        <label>SIGNING</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MA_StartDate__c</fullName>
        <label>Start Date (IC I)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MA_SteerCoApproval__c</fullName>
        <label>Steer Co Approval</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>IC I, IC II and IC III mandatory, thereafter EB and SB</fullName>
                </value>
                <value>
                    <fullName>IC I and IC III mandatory, thereafter EB</fullName>
                </value>
                <value>
                    <fullName>Only IC III mandatory, thereafter EB</fullName>
                </value>
                <value>
                    <fullName>IC procedure dependent on deal size</fullName>
                </value>
                <value>
                    <fullName>TBD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MA_TargetAdvisors__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Target Advisors</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>MA Project (Deal Team Target Advisors)</relationshipLabel>
        <relationshipName>MA2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MA_TargetContacts__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Target Contacts</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>MA Project (Deal Team Target)</relationshipLabel>
        <relationshipName>MA1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MA_Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Transformative</fullName>
                </value>
                <value>
                    <fullName>Large</fullName>
                </value>
                <value>
                    <fullName>Bolt-on</fullName>
                </value>
                <value>
                    <fullName>Strat. Small Majorities</fullName>
                </value>
                <value>
                    <fullName>Strat. Minorities</fullName>
                </value>
                <value>
                    <fullName>Minorities - VC like</fullName>
                </value>
                <value>
                    <fullName>7V / M4E</fullName>
                </value>
                <value>
                    <fullName>Divestment</fullName>
                </value>
                <value>
                    <fullName>TBD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MA_Unit__c</fullName>
        <label>Unit</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Broadcasting &amp; Content Production</fullName>
                </value>
                <value>
                    <fullName>Commerce</fullName>
                </value>
                <value>
                    <fullName>Digital Entertainment</fullName>
                </value>
                <value>
                    <fullName>Specialty Consumer</fullName>
                </value>
                <value>
                    <fullName>7NXT &amp; Adjacent</fullName>
                </value>
                <value>
                    <fullName>7Innovate</fullName>
                </value>
                <value>
                    <fullName>7Life</fullName>
                </value>
                <value>
                    <fullName>SOM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MA_acquired__c</fullName>
        <label>% acquired</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MA_divested__c</fullName>
        <label>% divested</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Steer_Co_Approval__c</fullName>
        <label>SteerCo</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>EB/SB</fullName>
                </value>
                <value>
                    <fullName>EB</fullName>
                </value>
                <value>
                    <fullName>SDB</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>M&amp;A Project</label>
    <listViews>
        <fullName>MA_Projects</fullName>
        <columns>NAME</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>MA_Cluster__c</columns>
        <columns>MA_Unit__c</columns>
        <columns>MA_EBITDA__c</columns>
        <columns>MA_EVinm__c</columns>
        <columns>MA_Revenue__c</columns>
        <columns>MA_MAstatus__c</columns>
        <filterScope>Everything</filterScope>
        <label>M&amp;A Projects</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>M&amp;A Project Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>M&amp;A Projects</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>